[gd_scene load_steps=5 format=2]

[ext_resource path="res://entities/world/world.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/enemies/raddish/raddish.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/Level.gd" type="Script" id=6]

[node name="Level" type="Node2D"]
script = ExtResource( 6 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.15, 0.15 )

[node name="background" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
margin_left = -1044.83
margin_top = -580.848
margin_right = 1456.17
margin_bottom = 654.152
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.4, 0.4 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.8, 0.8 )

[node name="World" parent="." instance=ExtResource( 1 )]
position = Vector2( 273.918, 422.25 )
collision_mask = 0
tile_data = PoolIntArray( -1245211, 3, 2, -1245210, 3, 6, -1245209, 3, 6, -1245208, 3, 3, -1310640, 3, 0, -1179675, 3, 2, -1179674, 3, 6, -1179673, 3, 6, -1179672, 3, 3, -1245102, 3, 131072, -1245101, 3, 65538, -1114139, 3, 2, -1114138, 3, 6, -1114137, 3, 6, -1114136, 3, 3, -1179570, 3, 0, -1179566, 3, 65540, -1179565, 3, 4, -1048603, 3, 2, -1048602, 3, 6, -1048601, 3, 6, -1048600, 3, 3, -1114029, 3, 4, -983067, 3, 2, -983066, 3, 6, -983065, 3, 6, -983064, 3, 3, -1048496, 3, 0, -1048493, 3, 4, -917531, 3, 2, -917530, 3, 6, -917529, 3, 6, -917528, 3, 3, -982957, 3, 4, -851995, 3, 2, -851994, 3, 6, -851993, 3, 6, -851992, 3, 3, -917436, 3, 65536, -917435, 3, 65537, -917434, 3, 0, -917433, 3, 0, -917432, 3, 0, -917431, 3, 0, -917430, 3, 0, -917429, 3, 0, -917428, 3, 0, -917427, 3, 0, -917426, 3, 0, -917425, 3, 0, -917424, 3, 0, -917423, 3, 0, -917422, 3, 0, -917421, 3, 0, -917420, 3, 0, -917419, 3, 0, -917418, 3, 0, -917417, 3, 0, -917416, 3, 65538, -917415, 3, 65539, -786459, 3, 2, -786458, 3, 6, -786457, 3, 6, -786456, 3, 3, -851902, 3, 65536, -851901, 3, 65537, -851900, 3, 6, -851899, 3, 6, -851898, 3, 6, -851897, 3, 6, -851896, 3, 6, -851895, 3, 6, -851894, 3, 6, -851893, 3, 6, -851892, 3, 6, -851891, 3, 6, -851890, 3, 6, -851889, 3, 6, -851888, 3, 6, -851887, 3, 6, -851886, 3, 6, -851885, 3, 6, -851884, 3, 0, -851883, 3, 8, -851882, 3, 8, -851881, 3, 8, -851880, 3, 8, -851879, 3, 8, -851878, 3, 65538, -851877, 3, 65539, -720923, 3, 2, -720922, 3, 6, -720921, 3, 6, -720920, 3, 3, -786368, 3, 65536, -786367, 3, 65537, -786366, 3, 6, -786365, 3, 6, -786364, 3, 6, -786363, 3, 6, -786362, 3, 6, -786361, 3, 6, -786360, 3, 6, -786359, 3, 6, -786358, 3, 6, -786357, 3, 6, -786356, 3, 6, -786355, 3, 6, -786354, 3, 6, -786353, 3, 6, -786352, 3, 6, -786351, 3, 6, -786350, 3, 6, -786349, 3, 6, -786348, 3, 0, -786347, 3, 8, -786346, 3, 8, -786345, 3, 8, -786344, 3, 8, -786343, 3, 8, -786342, 3, 8, -786341, 3, 8, -786340, 3, 65538, -786339, 3, 65539, -655387, 3, 2, -655386, 3, 6, -655385, 3, 6, -655384, 3, 3, -720860, 3, 3, -720834, 3, 65536, -720833, 3, 65537, -720832, 3, 6, -720831, 3, 6, -720830, 3, 6, -720829, 3, 6, -720828, 3, 6, -720827, 3, 6, -720826, 3, 6, -720825, 3, 6, -720824, 3, 6, -720823, 3, 6, -720822, 3, 6, -720821, 3, 6, -720820, 3, 6, -720819, 3, 6, -720818, 3, 6, -720817, 3, 6, -720816, 3, 6, -720815, 3, 6, -720814, 3, 6, -720813, 3, 6, -720812, 3, 0, -720811, 3, 8, -720810, 3, 8, -720809, 3, 8, -720808, 3, 8, -720807, 3, 8, -720806, 3, 8, -720805, 3, 8, -720804, 3, 8, -720803, 3, 131076, -720802, 3, 0, -720801, 3, 0, -720800, 3, 0, -720799, 3, 0, -720798, 3, 0, -720797, 3, 0, -720796, 3, 0, -589851, 3, 2, -589850, 3, 6, -589849, 3, 6, -589848, 3, 3, -655324, 3, 3, -655321, 3, 0, -655320, 3, 0, -655319, 3, 0, -655318, 3, 0, -655317, 3, 0, -655316, 3, 0, -655312, 3, 0, -655311, 3, 0, -655310, 3, 0, -655307, 3, 0, -655306, 3, 0, -655305, 3, 0, -655304, 3, 0, -655301, 3, 0, -655300, 3, 0, -655299, 3, 0, -655298, 3, 0, -655297, 3, 0, -655296, 3, 0, -655295, 3, 0, -655294, 3, 0, -655293, 3, 6, -655292, 3, 6, -655291, 3, 6, -655290, 3, 6, -655289, 3, 6, -655288, 3, 6, -655287, 3, 6, -655286, 3, 6, -655285, 3, 6, -655284, 3, 6, -655283, 3, 6, -655282, 3, 6, -655281, 3, 6, -655280, 3, 6, -655279, 3, 6, -655278, 3, 6, -655277, 3, 6, -655276, 3, 0, -655275, 3, 0, -524315, 3, 2, -524314, 3, 6, -524313, 3, 6, -524312, 3, 3, -589788, 3, 3, -589780, 3, 2, -589779, 3, 0, -589765, 3, 0, -589764, 3, 6, -589763, 3, 6, -589762, 3, 6, -589761, 3, 6, -589760, 3, 6, -589759, 3, 6, -589758, 3, 6, -589757, 3, 6, -589756, 3, 6, -589755, 3, 6, -589754, 3, 6, -589753, 3, 6, -589752, 3, 6, -589751, 3, 6, -589750, 3, 6, -589749, 3, 6, -589748, 3, 6, -589747, 3, 6, -589746, 3, 6, -589745, 3, 6, -589744, 3, 6, -589743, 3, 6, -589742, 3, 6, -589741, 3, 6, -589740, 3, 6, -589739, 3, 0, -458779, 3, 2, -458778, 3, 6, -458777, 3, 6, -458776, 3, 3, -524262, 3, 0, -524252, 3, 131076, -524251, 3, 0, -524250, 3, 0, -524249, 3, 0, -524248, 3, 0, -524247, 3, 0, -524244, 3, 2, -524243, 3, 0, -524242, 3, 0, -524229, 3, 0, -524228, 3, 0, -524227, 3, 6, -524226, 3, 6, -524225, 3, 6, -524224, 3, 6, -524223, 3, 6, -524222, 3, 6, -524221, 3, 6, -524220, 3, 6, -524219, 3, 6, -524218, 3, 6, -524217, 3, 6, -524216, 3, 6, -524215, 3, 6, -524214, 3, 6, -524213, 3, 6, -524212, 3, 6, -524211, 3, 6, -524210, 3, 6, -524209, 3, 6, -524208, 3, 6, -524207, 3, 6, -524206, 3, 6, -524205, 3, 6, -524204, 3, 6, -524203, 3, 0, -393243, 3, 2, -393242, 3, 6, -393241, 3, 6, -393240, 3, 3, -393229, 3, 65536, -393228, 3, 65537, -393227, 3, 65538, -393226, 3, 65539, -458735, 3, 0, -458726, 3, 0, -458708, 3, 2, -458707, 3, 0, -458706, 3, 0, -458705, 3, 0, -458693, 3, 0, -458692, 3, 6, -458691, 3, 6, -458690, 3, 6, -458689, 3, 6, -458688, 3, 6, -458687, 3, 6, -458686, 3, 6, -458685, 3, 6, -458684, 3, 6, -458683, 3, 6, -458682, 3, 6, -458681, 3, 6, -458680, 3, 6, -458679, 3, 6, -458678, 3, 6, -458677, 3, 6, -458676, 3, 6, -458675, 3, 0, -458674, 3, 6, -458673, 3, 6, -458672, 3, 6, -458671, 3, 6, -458670, 3, 6, -458669, 3, 6, -458668, 3, 6, -458667, 3, 0, -327707, 3, 2, -327706, 3, 6, -327705, 3, 6, -327704, 3, 131076, -327703, 3, 0, -327702, 3, 0, -327701, 3, 0, -327700, 3, 0, -327699, 3, 0, -327698, 3, 0, -327697, 3, 0, -327696, 3, 0, -327695, 3, 0, -327694, 3, 0, -327693, 3, 0, -327692, 3, 0, -327691, 3, 0, -327690, 3, 0, -327689, 3, 0, -327688, 3, 0, -327687, 3, 0, -327686, 3, 0, -327685, 3, 0, -327684, 3, 0, -327683, 3, 0, -327682, 3, 0, -327681, 3, 0, -393216, 3, 0, -393215, 3, 0, -393214, 3, 0, -393213, 3, 0, -393212, 3, 0, -393211, 3, 0, -393210, 3, 0, -393209, 3, 0, -393208, 3, 0, -393207, 3, 0, -393206, 3, 0, -393205, 3, 0, -393204, 3, 0, -393203, 3, 0, -393202, 3, 0, -393201, 3, 0, -393200, 3, 0, -393199, 3, 0, -393198, 3, 0, -393197, 3, 0, -393196, 3, 0, -393195, 3, 0, -393194, 3, 0, -393193, 3, 0, -393192, 3, 0, -393191, 3, 0, -393190, 3, 6, -393189, 3, 0, -393188, 3, 0, -393187, 3, 0, -393186, 3, 0, -393185, 3, 0, -393184, 3, 0, -393183, 3, 0, -393182, 3, 0, -393181, 3, 0, -393180, 3, 0, -393179, 3, 0, -393178, 3, 0, -393177, 3, 0, -393176, 3, 0, -393175, 3, 0, -393174, 3, 0, -393173, 3, 0, -393172, 3, 131077, -393171, 3, 0, -393170, 3, 0, -393169, 3, 0, -393168, 3, 0, -393167, 3, 0, -393166, 3, 0, -393165, 3, 0, -393164, 3, 0, -393163, 3, 0, -393162, 3, 0, -393161, 3, 0, -393160, 3, 0, -393159, 3, 0, -393158, 3, 0, -393157, 3, 0, -393156, 3, 0, -393155, 3, 0, -393154, 3, 0, -393153, 3, 0, -393152, 3, 0, -393151, 3, 0, -393150, 3, 0, -393149, 3, 0, -393148, 3, 0, -393147, 3, 0, -393146, 3, 0, -393145, 3, 0, -393144, 3, 0, -393143, 3, 0, -393142, 3, 0, -393141, 3, 0, -393140, 3, 0, -393139, 3, 0, -393138, 3, 0, -393137, 3, 0, -393136, 3, 0, -393135, 3, 0, -393134, 3, 0, -393133, 3, 0, -393132, 3, 0, -393131, 3, 0, -262171, 3, 2, -262170, 3, 6, -262169, 3, 6, -262168, 3, 6, -262167, 3, 6, -262166, 3, 6, -262165, 3, 6, -262164, 3, 6, -262163, 3, 6, -262162, 3, 6, -262161, 3, 6, -262160, 3, 6, -262159, 3, 6, -262158, 3, 6, -262157, 3, 6, -262156, 3, 6, -262155, 3, 6, -262154, 3, 6, -262153, 3, 6, -262152, 3, 6, -262151, 3, 6, -262150, 3, 6, -262149, 3, 6, -262148, 3, 6, -262147, 3, 6, -262146, 3, 6, -262145, 3, 6, -327680, 3, 6, -327679, 3, 6, -327678, 3, 6, -327677, 3, 6, -327676, 3, 6, -327675, 3, 6, -327674, 3, 6, -327673, 3, 6, -196631, 3, 1, -196630, 3, 1, -196629, 3, 1, -196628, 3, 1, -196627, 3, 1, -196626, 3, 1, -196625, 3, 1, -196624, 3, 1, -196623, 3, 1, -196622, 3, 1, -196621, 3, 1, -196620, 3, 1, -196619, 3, 1, -196618, 3, 1, -196617, 3, 1, -196616, 3, 1, -196615, 3, 1, -196614, 3, 1, -196613, 3, 1, -196612, 3, 1, -196611, 3, 1, -196610, 3, 1, -196609, 3, 1, -262144, 3, 1, -262143, 3, 1, -262142, 3, 1, -262141, 3, 1, -262140, 3, 1, -262139, 3, 1, -262138, 3, 1, -262137, 3, 1 )

[node name="Enemies" type="Node2D" parent="."]
z_index = -1

[node name="raddish" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 5389.34, -518.025 )

[node name="Banana" parent="." instance=ExtResource( 2 )]

[node name="Pickups" type="Node2D" parent="."]

[node name="Triggers" type="Node2D" parent="."]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="HUD_BG" type="ColorRect" parent="HUD"]
margin_right = 1024.0
margin_bottom = 50.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HPLabel" type="Label" parent="HUD/HUD_BG"]
margin_right = 32.0
margin_bottom = 50.0
text = "HP:"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HPValue" type="Label" parent="HUD/HUD_BG"]
margin_left = 32.0
margin_right = 168.0
margin_bottom = 50.0
text = "0"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CurrentWeaponLabel" type="Label" parent="HUD/HUD_BG"]
margin_left = 312.0
margin_right = 424.0
margin_bottom = 50.0
text = "Current Weapon:"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CurrentWeaponValue" type="Label" parent="HUD/HUD_BG"]
margin_left = 424.0
margin_right = 568.0
margin_bottom = 50.0
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AmmoLabel" type="Label" parent="HUD/HUD_BG"]
margin_left = 744.0
margin_right = 792.0
margin_bottom = 50.0
text = "Ammo:"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AmmoValue" type="Label" parent="HUD/HUD_BG"]
margin_left = 792.0
margin_right = 944.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 315, 5 )
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Dialog" type="AcceptDialog" parent="HUD"]
margin_left = 340.0
margin_top = 268.0
margin_right = 689.0
margin_bottom = 512.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="confirmed" from="HUD/Dialog" to="." method="_on_Dialog_confirmed"]
